# INF01047-FCG-Trabalho-Final

./: .gitignore  CMakeLists.txt  README.md  TrabalhoFinal.cbp  TrabalhoFinal.depend  TrabalhoFinal.layout  hash-final.txt
Blender Models/: flecha.blend  robot.blend
output/shaders/: shader_fragment.glsl
src/: ObjModel.cpp  main.cpp  shader_fragment-tarefa1.glsl  shader_fragment-tarefa2.glsl  textrendering.cpp
src/data/: dragon.mtl
src/game/: BaseScene.cpp  BaseScene.h  BezierObject.cpp  BezierObject.h  FirstScene.cpp  FirstScene.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  collisions.cpp  collisions.h
src/game/entities/: Arrow.cpp  Arrow.h  Player.cpp  Player.h  Target.cpp  Target.h
src/input/: Command.h  EscCommand.cpp  EscCommand.h  InputManager.cpp  InputManager.h  MoveCommand.cpp  MoveCommand.h  PrimaryActionCommand.cpp  PrimaryActionCommand.h  ReloadShadersCommand.cpp  ReloadShadersCommand.h  RotateTarget.cpp  RotateTarget.h  SecondaryActionCommand.cpp  SecondaryActionCommand.h
src/renderer/: BoundingBox.cpp  BoundingBox.h  CrossHairModel.cpp  CrossHairModel.h  IBO.cpp  IBO.h  Matrices.cpp  Matrices.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  SceneObject.h  VBO.cpp  VBO.h  Window.cpp  Window.h
src/shaders/: shader_fragment.glsl  shader_vertex.glsl  ui_shader_fragment.glsl  ui_shader_vertex.glsl
